# csv_to_sql

./: .dockerignore  .editorconfig  .env.sample  .gitignore  README.md  command.py  docker-compose.yaml  index.html  main.py  main_cli.py  pyproject.toml  requirements.txt
cProfile/: report.out
config/: config.yaml
csv_to_sql/: .editorconfig  main_cli.py
csv_to_sql/config/: config.yaml.sample
csv_to_sql/export/: shopify_product.sql
csv_to_sql/libs/: db_utils.py  get_config.py  logger.py  process_data.py
dao/: data_dao.py
dockerfiles/: Dockerfile
files/: sample.csv
libs/: db_utils.py  get_config.py  process_data.py
models/: models.py
tests/: test_csv_to_sql.py
tests/to_sql/: test.py  test_get_config.py  test_process_data.py  test_to_sql.py
tests/to_sql/libs/: test_get_config.py  test_process_data.py
to_sql/: main.py
to_sql/app/: common.py
to_sql/config/: config.yaml.sample
to_sql/files/: products.xml  sample.csv  sample.xml
to_sql/libs/: db_utils.py  get_config.py  logger.py  process_data.py
to_sql/models/: models.py
