[tool.poetry]
name = "to_sql"
version = "0.1.1"
description = ""
authors = ["Tran Dinh Dong <vanvuvuong3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alive-progress = "^2.4.1"
typer = "^0.4.1"
pandas = "^1.4.2"
SQLAlchemy = "^1.4.37"
PyMySQL = "^1.0.2"
PyYAML = "^6.0"
lxml = "^4.9.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
